@@ -556,7 +556,9 @@ RUBY_EXTERN char *ruby_sourcefile;
 ID rb_id_attrset(ID);
 void rb_gc_mark_parser(void);
 int rb_is_const_id(ID);
+int rb_is_global_id(ID);
 int rb_is_instance_id(ID);
+int rb_is_attrset_id(ID);
 int rb_is_class_id(ID);
 int rb_is_local_id(ID);
 int rb_is_junk_id(ID);
