@@ -1,3 +1,8 @@
+Fri Jul 22 20:44:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (rb_is_global_id, rb_is_attrset_id): add missing
+	  predicates.
+
 Fri Jul 22 20:24:38 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* test/ruby/test_object.rb (TestObject#test_respond_to_missing):
